--- a/CSS/landingpage.css
+++ b/CSS/landingpage.css
@@ -149,7 +149,7 @@ strip
 .marquee {
     display: flex;
     width: 100%;
-    height: 3%;
+    height: 4.15%;
     bottom: 0;
     left: 0;
     overflow: hidden;
@@ -162,7 +162,9 @@ strip
     display: flex;
     overflow: hidden;
 }
-
+.marquee div{
+    letter-spacing: 2px;
+}
 .marquee div:nth-child(1) {
     position: absolute;
     white-space: nowrap;
