--- a/CSS/service.css
+++ b/CSS/service.css
@@ -43,6 +43,22 @@
   text-align: justify;
 
 }
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); 
+  z-index: 1;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
+}
+
+/* When hovering over the card, reduce overlay opacity */
+.service-grid-item:hover .card-overlay {
+  display: none;
+}
 
 
 /* Responsive layout for mobile (1 column) */
