--- a/CSS/service.css
+++ b/CSS/service.css
@@ -50,7 +50,7 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.7); 
   z-index: 1;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 1s ease-in-out;
   opacity: 1;
 }
 
@@ -79,6 +79,12 @@
 
   }
   
+
+
+/* When hovering over the card, reduce overlay opacity */
+.card-overlay {
+  display: none;
+}
 }
 
 
