--- a/CSS/competition.css
+++ b/CSS/competition.css
@@ -138,7 +138,7 @@ align-items: center;
     background-size: cover;
   }
   /* Add hover effect to buttons */
-  .dynamic-button:hover {
+  .dynamic-button.active {
     background-color: #9c0894;
     color: white;
   }
@@ -183,28 +183,7 @@ align-items: center;
 
   
 
-  .realistic-button {
-    background: linear-gradient(145deg, #ffffff, #d1d1d1);
-    border: none;
-    border-radius: 12px;
-    box-shadow: 6px 6px 12px #c2c2c2, -6px -6px 12px #ffffff;
-    color: #333;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 12px 24px;
-    transition: all 0.3s ease;
-}
-
-.realistic-button:active {
-    box-shadow: inset 6px 6px 12px #c2c2c2, inset -6px -6px 12px #ffffff;
-}
-
-.realistic-button:hover {
-    background: linear-gradient(145deg, #e6e6e6, #cccccc);
-    box-shadow: 4px 4px 10px #b3b3b3, -4px -4px 10px #ffffff;
-}
-
+ 
 #competition button{
   padding: 0;
 }
